@@ -1,3 +1,9 @@
+2001-03-13  Donal K. Fellows  <fellowsd@cs.man.ac.uk>
+
+	* generic/tclExecute.c (TclDeleteExecEnv, GrowEvaluationStack,
+	TclExecuteByteCode): Added some casts to ClientData that are
+	apparently needed on some architectures.
+
 2001-03-12  Donal K. Fellows  <fellowsd@cs.man.ac.uk>
 
 	* tests/string.test: Fixed some test numberings and added a test.
